@@ -128,6 +128,11 @@ CONFIG_STM32_USART1=y
 CONFIG_STM32_ADC3=n
 
 #
+# Timer and I2C devices may need to the following to force power to be applied:
+#
+#CONFIG_STM32_FORCEPOWER=y
+
+#
 # STM32F103Z specific serial device driver settings
 #
 # CONFIG_USARTn_SERIAL_CONSOLE - selects the USARTn for the
